# massive-rust-websocket-client

./: .gitignore  Cargo.toml
benches/: benchmarks.rs  throughput.rs
examples/: fmv.rs  heap_profile.rs  launchpad.rs  profile.rs  stocks.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_json_deser/: seed_agg.json  seed_array.json  seed_crypto.json  seed_fmv.json  seed_trade.json
fuzz/corpus/fuzz_peek_event_type/: seed_agg.json  seed_empty_ev.json  seed_ev_not_first.json  seed_status.json  seed_trade.json
fuzz/fuzz_targets/: fuzz_json_deser.rs  fuzz_peek_event_type.rs
scripts/: ci.sh
src/: lib.rs
src/websocket/: client.rs  config.rs  error.rs  mod.rs  models.rs  subscription.rs
tests/: alloc_test.rs  loom_tests.rs  proptest_tests.rs
